# Astra-Chess-Engine

./: CMakeLists.txt  README.md
src/: genData.h  main.cpp
src/chess/: attacks.cpp  attacks.h  bitboard.h  board.cpp  board.h  misc.h  movegen.cpp  movegen.h  perft.h  types.h  zobrist.h
src/eval/: accumulator.cpp  accumulator.h  accumulators.h  endgame.cpp  endgame.h  eval.cpp  eval.h  evalparam.h  evaluate.cpp  evaluate.h  hashing.cpp  hashing.h  nnue.cpp  nnue.h  psqt.cpp  psqt.h  readme.me
src/eval/weights/: endgame.h  oscmiddlegame.h  phasecount.h  sscmiddlegame.h
src/search/: eval.h  evaluate.h  moveordering.cpp  moveordering.h  psqt.h  pvTable.cpp  pvTable.h  search.cpp  search.h  timemanager.h  tt.cpp  tt.h
